# lintrunner-adapters

./: .editorconfig  .flake8  .gitignore  .lintrunner.toml  LICENSE  README.md  pyproject.toml  requirements-test.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  lint.yml  test.yml
adapters/: pylint_linter.py
adapters/pytorch/: actionlint_linter.py  black_isort_linter.py  black_linter.py  circleci_linter.py  clangformat_linter.py  clangtidy_linter.py  cmake_linter.py  exec_linter.py  flake8_linter.py  grep_linter.py  isort_linter.py  mypy_linter.py  nativefunctions_linter.py  newlines_linter.py  pip_init.py  s3_init.py  shellcheck_linter.py  testowners_linter.py  update_s3.py  workflow_consistency_linter.py
examples/adapters/add_trailing_comma_linter/: .lintrunner.toml
examples/adapters/bandit_linter/: .lintrunner.toml
examples/adapters/banned_functions_linter/: .lintrunner.toml
examples/adapters/clippy_linter/: .lintrunner.toml
examples/adapters/cmake_format_linter/: .lintrunner.toml  README.md  test_cmake.cmake
examples/adapters/cpp_banned_functions_linter/: .lintrunner.toml  example_banned_functions.json  example_banned_functions.json.license
examples/adapters/cppcheck_linter/: .lintrunner.toml
examples/adapters/django_upgrade_linter/: .lintrunner.toml
examples/adapters/docformatter_linter/: .lintrunner.toml
examples/adapters/pyupgrade_linter/: .lintrunner.toml
examples/adapters/refurb/: .lintrunner.toml
examples/adapters/refurb_linter/: .lintrunner.toml
examples/adapters/ruff_fix_linter/: .lintrunner.toml
examples/adapters/ruff_linter/: .lintrunner.toml
examples/adapters/rustfmt_linter/: .lintrunner.toml
examples/adapters/toml_sort_linter/: .lintrunner.toml
examples/pytorch/: actionlint_linter.py  black_isort_linter.py  black_linter.py  circleci_linter.py  clangformat_linter.py  clangtidy_linter.py  exec_linter.py  flake8_linter.py  grep_linter.py  isort_linter.py  mypy_linter.py  nativefunctions_linter.py  newlines_linter.py  pip_init.py  s3_init.py  testowners_linter.py  ufmt_linter.py  update_s3.py  workflow_consistency_linter.py
examples/testdata/: lint.jsonl  test.cc
lintrunner_adapters/: __init__.py  __main__.py  cli.py
lintrunner_adapters/_common/: lintrunner_common.py
lintrunner_adapters/adapters/: add_trailing_comma_linter.py  bandit_linter.py  banned_functions_linter.py  black_isort_linter.py  black_linter.py  clangformat_linter.py  clippy_linter.py  cmake_linter.py  cpp_banned_functions_linter.py  cppcheck_linter.py  django_upgrade_linter.py  docformatter_linter.py  editorconfig_checker_linter.py  exec_linter.py  flake8_linter.py  grep_linter.py  isort_linter.py  mypy_linter.py  newlines_linter.py  pip_init.py  pylint_linter.py  pyupgrade_linter.py  refurb_linter.py  requirements_txt_linter.py  ruff_fix_linter.py  ruff_format_linter.py  ruff_linter.py  rustfmt_linter.py  shellcheck_linter.py  toml_sort_linter.py  ufmt_linter.py
lintrunner_adapters/common/: lintrunner_common.py
lintrunner_adapters/tools/: convert_to_sarif.py  convert_to_sarif_test.py
tools/: convert_to_sarif.py  convert_to_sarif_test.py
