[tool.poetry]
name = "lintrunner-adapters"
version = "0.6.5"
description = "Adapters and tools for lintrunner"
authors = ["Justin Chu <justinchu@microsoft.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/justinchuby/lintrunner-adapters"
keywords = ["lintrunner", "lint", "cli", "sarif", "linting", "ci", "linter", "flake8", "clippy", "ruff", "rustfmt", "github-code-scanning"]
classifiers = [
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
packages = [{ include = "lintrunner_adapters" }]
include = ["LICENSE"]

[tool.poetry.scripts]
lintrunner_adapters = 'lintrunner_adapters.__main__:cli'

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
lintrunner = "^0.10.0"
pytest = "^7.2.0"
types-pyyaml = "^6.0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"

[tool.mypy]
strict = true
show_error_codes = true
show_column_numbers = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "lintrunner_adapters.adapters.*"
warn_unused_ignores = false

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = [
    "duplicate-code",
    "fixme",
    "format",
    "import-error",
    "invalid-name",
    "line-too-long",
    "missing-docstring",
    "no-member",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-instance-attributes",
    # Repo specific ones
    "broad-except",
    "broad-except",
    "consider-using-f-string",
    "logging-fstring-interpolation",
    "no-else-continue",
    "redefined-builtin",
    "redefined-outer-name",
    "subprocess-run-check",
    "too-many-return-statements",
    "unnecessary-pass",
    "unused-argument",
    "unused-import",
]

[tool.refurb]
python_version = "3.7"
disable = ["FURB101", "FURB150"] # disable suggestions using pathlib

[tool.ruff]
target-version = "py37"
ignore-init-module-imports = true
select = [
    "D",
    "E",
    "F",
    "W",
    "B",
    "N",
    "UP",
    "YTT",
    "PLE",
    "PLC",
    "PLW",
    "RUF",
]
ignore = [
    "D1",
    "D202",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "E501",
]
line-length = 120

[tool.ruff.pydocstyle]
convention = "google"
